# discord-linux-overlay

./: .gitignore  LICENSE  README.md  overlay-ctl  pyproject.toml  requirements.txt
discord_overlay/: __main__.py  avatars.py  config.py  hotkey.py  hotkey_portal.py  overlay.py  rpc.py  tray.py  wayland.py  x11.py
